--- a/UI/login.html
+++ b/UI/login.html
@@ -16,8 +16,8 @@
 			<nav>
 				<ul>
 					<li><a href="./home.html">Home</a></li>
-					<li><a href="">About</a></li>
-					<li><a href="">Services</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Services</a></li>
 				</ul>
 			</nav>
 		</div>
