--- a/UI/cart.html
+++ b/UI/cart.html
@@ -62,9 +62,9 @@
 				<div class = "container">			
 					<nav>
 						<ul>
-							<li><a href="#"><span class="selected">Products</span></a></li>
+							<li><a href="./attendant-dashboard.html">Products</a></li>
 							<li><a href="#">Records</a></li>
-							<li><a href="./cart.html">Cart</a></li>
+							<li><a href="#"><span class="selected">Cart</span></a></li>
 						</ul>
 					</nav>
 					<hr>
@@ -164,7 +164,7 @@
 	</footer>
 	<div id="dialog-background-window">
 		<div id="dialog-box">
-			<div id="content-header">Add Item to cart?</div>
+			<div id="content-header">Remove Item from cart?</div>
 			<div class="options-button">
 				<input id="cancel-button" class="cancel" type="button" value="Cancel"></input>
 				<input id="confirm-button" class="confirm" type="button" value="Confirm"></input>
