Add records page

--- a/UI/attendant-dashboard.html
+++ b/UI/attendant-dashboard.html
@@ -63,7 +63,7 @@
 					<nav>
 						<ul>
 							<li><a href="#"><span class="selected">Products</span></a></li>
-							<li><a href="#">Records</a></li>
+							<li><a href="./records.html">Records</a></li>
 							<li><a href="./cart.html">Cart</a></li>
 						</ul>
 					</nav>
