--- a/UI/records.html
+++ b/UI/records.html
@@ -63,8 +63,8 @@
 					<nav>
 						<ul>
 							<li><a href="./attendant-dashboard.html">Products</a></li>
-							<li><a href="./records.html">Records</a></li>
-							<li><a href="#"><span class="selected">Cart</span></a></li>
+							<li><a href="#"><span class="selected">Records</span></a></li>
+							<li><a href="./cart.html">Cart</a></li>
 						</ul>
 					</nav>
 					<hr>
@@ -73,84 +73,116 @@
 				<div class="container">
 					<div class="wrapper">	
 						<div class="items-box">
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip">
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
+								</div>
+								<div class="tooltiptext">
+									Sales Id: #134218402
+									<br>
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
+									<br>
+									Time: 12:20pm
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+							<div class="item tooltip" >
+								<div class="sale-record">
+									<span class="record-details">Sales Id: #134218402</span>
 									<br>
-									Min-Inventory: 6
+									<span class="record-date">11-Oct-2018</span>
 								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Sales Id: #134218402
 									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item2.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
+									<span>Sales Items: wireless earpiece(5), bluetooth headphone(7)</span>
 									<br>
-									Min-Inventory: 6
+									Time: 12:20pm
 								</div>
 							</div>
 						</div>
@@ -171,6 +203,6 @@
 			</div>
 		</div>
 	</div>
-	<script type="text/javascript" src="./scripts/main.js"></script>
+	
 </body>
 </html>
