Add checkout button

--- a/UI/cart.html
+++ b/UI/cart.html
@@ -71,7 +71,9 @@
 
 				</div>
 				<div class="container">
-					<div class="wrapper">	
+					<div class="wrapper">
+
+					  <input type="button" class="confirm checkout" value="checkout"></input>	
 						<div class="items-box">
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
