--- a/UI/records.html
+++ b/UI/records.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<link href="./styles/main.css" rel="stylesheet">
 	<link href="./styles/extras.css" rel="stylesheet">
-	<title>Store-Manager | Attendant Dashboard</title>
+	<title>Store-Manager | Records</title>
 </head>
 
 <body>
