Add categories tab

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -59,6 +59,7 @@
 						<ul>
 							<li><a href="#"><span class="selected">Products</span></a></li>
 							<li><a href="./attendants.html">Attendants</a></li>
+							<li><a href="#">Categories</a></li>
 						</ul>
 					</nav>
 					<hr>
