--- a/UI/admin.html
+++ b/UI/admin.html
@@ -67,6 +67,7 @@
 				</div>
 				<div class="container">
 					<div class="wrapper">	
+						<input type="button" class="confirm checkout" value="New"></input>	
 						<div class="items-box">
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
