Link admin's attendant list with individual attendant

--- a/UI/attendants.html
+++ b/UI/attendants.html
@@ -69,7 +69,7 @@
 					<div class="wrapper">	
 						<input type="button" class="confirm checkout" value="New" onclick="window.location.href='./create-attendant.html';"></input>	
 						<div class="items-box">
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att1.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
@@ -79,7 +79,7 @@
 									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att2.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
@@ -89,27 +89,27 @@
 									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att3.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
 									<br>
-									Last Seen: 12-OCt-18 12:43PM
+									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att4.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
 									<br>
-									Last Seen: 12-OCt-18 12:43PM
+									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att1.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
@@ -119,7 +119,7 @@
 									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att2.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
@@ -129,27 +129,27 @@
 									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att3.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
 									<br>
-									Last Seen: 12-OCt-18 12:43PM
+									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att4.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
 									<br>
-									Last Seen: 12-OCt-18 12:43PM
+									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att1.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
@@ -159,7 +159,7 @@
 									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att2.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
@@ -169,24 +169,24 @@
 									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att3.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
 									<br>
-									Last Seen: 12-OCt-18 12:43PM
+									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
-							<div class="item tooltip" onclick="displayDialog();">
+							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att4.jpg">
 								<div class="tooltiptext">
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
 									<br>
-									Last Seen: 12-OCt-18 12:43PM
+									Last Seen: 12-Oct-18 12:43PM
 								</div>
 							</div>
 						</div>
@@ -198,15 +198,6 @@
 	<footer>
 		<p> Store Manager Copyright &copy; 2018</p>
 	</footer>
-	<div id="dialog-background-window">
-		<div id="dialog-box">
-			<div id="content-header">Select Action to Perform:</div>
-			<div class="options-button">
-				<input id="delete-button" class="delete" type="button" value="Delete"></input>
-				<input id="modify-button" class="modify" type="button" value="Modify"></input>
-			</div>
-		</div>
-	</div>
 	<script type="text/javascript" src="./scripts/main.js"></script>
 </body>
 </html>
