ch(Update readme.md)

--- a/UI/cart.html
+++ b/UI/cart.html
@@ -16,7 +16,7 @@
 			</div>			
 			<nav>
 				<ul>
-					<li><a href="./home.html">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Services</a></li>
 				</ul>
@@ -72,87 +72,86 @@
 				</div>
 				<div class="container">
 					<div class="wrapper">
-
-					  <input type="button" class="confirm checkout" value="checkout"></input>	
+						<input type="button" class="confirm checkout" value="checkout"></input>	
 						<div class="items-box">
 							<div class="item tooltip" onclick="displayDialog();">
-								<img src="./images/item1.jpg">
-								<div class="tooltiptext">
-									Quantity: 300
-									<br>
-									Min-Inventory: 6
-								</div>
-							</div>
-							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>		
 									Quantity: 300
-									<br>
-									Min-Inventory: 6
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
 								</div>
 							</div>
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
-									Quantity: 300
+									Price: $8
 									<br>
-									Min-Inventory: 6
+									Quantity: 300
+								</div>
+							</div>
+							<div class="item tooltip" onclick="displayDialog();">
+								<img src="./images/item2.jpg">
+								<div class="tooltiptext">
+									Price: $8
+									<br>
+									Quantity: 300
 								</div>
 							</div>
 						</div>
