--- a/UI/admin.html
+++ b/UI/admin.html
@@ -16,7 +16,7 @@
 			</div>			
 			<nav>
 				<ul>
-					<li><a href="./home.html">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Services</a></li>
 				</ul>
@@ -72,6 +72,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -80,6 +82,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -88,6 +92,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -96,6 +102,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -104,6 +112,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -112,6 +122,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -120,6 +132,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -128,6 +142,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -136,6 +152,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -144,6 +162,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
