--- a/UI/attendant-dashboard.html
+++ b/UI/attendant-dashboard.html
@@ -16,7 +16,7 @@
 			</div>			
 			<nav>
 				<ul>
-					<li><a href="./home.html">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Services</a></li>
 				</ul>
@@ -76,6 +76,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -84,6 +86,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -92,6 +96,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -100,6 +106,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -108,6 +116,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -116,6 +126,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -124,6 +136,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -132,6 +146,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -140,6 +156,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item1.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
@@ -148,6 +166,8 @@
 							<div class="item tooltip" onclick="displayDialog();">
 								<img src="./images/item2.jpg">
 								<div class="tooltiptext">
+									Price: $8
+									<br>
 									Quantity: 300
 									<br>
 									Min-Inventory: 6
