--- a/UI/attendants.html
+++ b/UI/attendants.html
@@ -57,7 +57,7 @@
 				<div class = "container">			
 					<nav>
 						<ul>
-							<li><a href="#">Products</a></li>
+							<li><a href="./admin.html">Products</a></li>
 							<li><a href="./attendants.html"><span class="selected">Attendants</span></a></li>
 							<li><a href="#">Categories</a></li>
 						</ul>
@@ -72,6 +72,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att1.jpg">
 								<div class="tooltiptext">
+									Name: James Rogue
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -82,6 +84,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att2.jpg">
 								<div class="tooltiptext">
+									Name: Jean Sean
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -92,6 +96,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att3.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -102,6 +108,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att4.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -112,6 +120,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att1.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -122,6 +132,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att2.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -132,6 +144,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att3.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -142,6 +156,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att4.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -152,6 +168,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att1.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -162,6 +180,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att2.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -172,6 +192,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att3.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
@@ -182,6 +204,8 @@
 							<div class="item tooltip" onclick="window.location.href='./records.html';">
 								<img src="./images/att4.jpg">
 								<div class="tooltiptext">
+									Name: Kate Riley
+									<br>
 									Total Sales: 258
 									<br>
 									Total Amount: $1,656
