--- a/UI/create-attendant.html
+++ b/UI/create-attendant.html
@@ -15,7 +15,7 @@
 			</div>			
 			<nav>
 				<ul>
-					<li><a href="./home.html">Home</a></li>
+					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Services</a></li>
 				</ul>
